--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,12 @@
 <router-outlet></router-outlet>
 
-
 <h1 class="titre">Bienvenue sur Adopte ton Super Héros</h1>
 
 
 <ul class="navbar">
     <li class="teste"><a routerLink="/Heroes">Heros</a></li>
+</ul>
+
+<ul class="navbar">
+    <li class="teste"><a href="http://localhost:4200/">Retour</a></li>
 </ul>
