--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <router-outlet></router-outlet>
 
-<h1 class="titre">Bienvenue sur Adopte ton Super Héros</h1>
+<h1 class="titre">Adopte ton Super Héros</h1>
 
 
 <ul class="navbar">
