response API name Heroes

--- a/src/app/Components/super-heroes-list/super-heroes-list.component.html
+++ b/src/app/Components/super-heroes-list/super-heroes-list.component.html
@@ -1,6 +1,6 @@
 <ul>
     <li *ngFor="let hero of heroes">
-    <app-hero-detail [hero]="heroes"></app-hero-detail>
+    <app-hero-detail [hero]="hero"></app-hero-detail>
     <div>
         {{hero.name}}
     </div>
