--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,5 +8,5 @@
 </ul>
 
 <ul class="navbar">
-    <li class="teste"><a href="http://localhost:4200/">Retour</a></li>
+    <li class="teste"><a routerLink="/hero">Name Heroes</a></li>
 </ul>
