--- a/src/app/Components/super-heroes-list/super-heroes-list.component.html
+++ b/src/app/Components/super-heroes-list/super-heroes-list.component.html
@@ -1,8 +1,19 @@
-<ul>
-    <li *ngFor="let hero of heroes">
+   
+
+    <h1 class="titre">Adopte ton Super Héros</h1>
+
+    <ul *ngFor="let hero of heroes">
     <app-hero-detail [hero]="hero"></app-hero-detail>
-    <div>
-        {{hero.name}}
-    </div>
-    </li>
-</ul>
+        <div class="titre">
+            <img  src="{{hero.image.url}}" alt="Image de tout les Super Héros">  <!-- .image.url <= changer ceci pour avoir les info voulut-->
+        </div>
+
+        <div class="titre">
+          <h1> Nom : {{hero.name}}<br>  <!-- ICI s'affiche les Nom des Heros-->
+             Base : {{hero.work.base}} <br> <!-- ↑ -->
+            <a href="https://www.superheroapi.com/api.php/10159385542572346/{{hero.id}}">ID : {{hero.id}}   </a>  <!-- Affiche l'Id ici -->
+          </h1>    
+
+          <h1>---------------------------------------------</h1>    <!--Séparateur -->
+        </div>
+    <ul>
