--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,17 @@
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+<h1 class="titre">{{title}}</h1>  <!-- la variable titre se trouve dans le fichier app.component.ts -->
+
+<nav class="nav">
+    <ul class="navbar">
+        <li class="teste"><a class="lien" routerLink="/Heroes">Heros</a></li>  
+    </ul>
+
+    <ul class="navbar">
+        <li class="teste"><a class="lien"  routerLink="/hero">Images Heroes</a></li>
+    </ul>
+</nav>
+
 <router-outlet></router-outlet>
 
-<h1 class="titre">Adopte ton Super Héros</h1>
-
-
-<ul class="navbar">
-    <li class="teste"><a routerLink="/Heroes">Heros</a></li>
-</ul>
-
-<ul class="navbar">
-    <li class="teste"><a routerLink="/hero">Name Heroes</a></li>
-</ul>
+<app-footer></app-footer>
