--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,6 @@
 *{
     padding: 0;
-    margin: 0;
+    margin: 0 auto;
     box-sizing: 0;
 }
 
@@ -12,17 +12,17 @@
 .titre{
     // text-align: center;
     color: rgb(12, 0, 117);
-    background: rgb(87, 76, 76);
+    background: rgb(187, 187, 187);
 }
 
 
 .nav{
-    background: rgb(87, 76, 76);
+    background: rgb(187, 187, 187);
 }
 
 .navbar{
     display: inline-block;
-    background: rgb(192, 154, 154);
+    background: rgb(92, 82, 82);
     padding: 5px;
 }
 
