add background and css nav menu

--- a/src/app/Components/footer/footer.component.html
+++ b/src/app/Components/footer/footer.component.html
@@ -1,7 +1,18 @@
 
 
-<footer class="py-5 bg-dark">
-    <div class="containers">
-        <p class="text-center">Copyright &copy;Adopte ton Super Héros 2021 all rights reserved</p>
-    </div>
-</footer>
+        <footer class="page-footer" class="navigation">
+            <div class="container">
+              <div class="row">
+                <div class="col 5 offset-5 s5">
+                </div>
+              </div>
+            </div>
+            <div class="footer-copyright">
+              <div class="container center">
+                <h5>
+                add info footer HERE.<br>
+              © 2021 Copyright Injectable Group
+              </h5>
+              </div>
+            </div>
+          </footer>
