--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,23 @@
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-<h1 class="titre">{{title}}</h1>  <!-- la variable titre se trouve dans le fichier app.component.ts -->
+<head>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+</head>
+<body>
+    
 
-<nav class="nav">
-    <ul class="navbar">
-        <li class="teste"><a class="lien" routerLink="/Heroes">Heros</a></li>  
-    </ul>
 
-    <ul class="navbar">
-        <li class="teste"><a class="lien"  routerLink="/hero">Images Heroes</a></li>
-    </ul>
-</nav>
+<header id="showcase">
+    <!-- <h1 class="text-center">Adopte ton Super Héros</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt assumenda quae beatae est dolores.</p> -->
+    <a routerLink="/hero" class="button">En savoir plus</a>
+</header>
+
+
+
+
+</body>
+
 
 <router-outlet></router-outlet>
-
 <app-footer></app-footer>
