--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,17 +1,15 @@
 *{
     padding: 0;
     margin: 0 auto;
-    box-sizing: 0;
 }
 
-.teste{
+.Home{
     display: inline-block;
 }
 
 
-.titre{
-    // text-align: center;
-    color: rgb(12, 0, 117);
+.title{
+    color: rgb(0, 0, 0);
     background: rgb(187, 187, 187);
 }
 
@@ -21,16 +19,60 @@
 }
 
 .navbar{
-    display: inline-block;
-    background: rgb(92, 82, 82);
-    padding: 5px;
+    font-size: 18px;
+    text-decoration: none;
+    color:  #926239;
+    border: #926239 1px solid;
+    border-radius:  10px;
 }
 
 .navbar:hover{
-    background: #000;
+    background:#926239;
+    color: #fff;
 }
 
 .lien{
     color: white;
     text-decoration: none;  
+}
+
+#showcase{
+    // background: url(https://cdn.pixabay.com/photo/2017/02/15/07/50/super-2067827_960_720.jpg);
+     background-image: url(Héros.png);
+     height: 100vh; //Viewport height auteur écrant
+     background-position: center;
+     background-size: cover;
+     display: flex;
+     flex-direction: column;
+     justify-content: center;
+     align-items: center;
+     padding: 0 20px;
+}
+
+#showcase h1{
+    font-size: 50px;
+
+}
+
+#showcase p{
+    font-size: 20px;
+}
+
+#showcase .button {
+    font-size: 18px;
+    text-decoration: none;
+    color:  #926239;
+    border: #926239 1px solid;
+    padding: 10px 20px;
+    border-radius:  10px;
+    margin-top: 20px;
+}
+
+#showcase .button:hover{
+    background:#926239;
+    color: #fff;
+}
+
+.navigation{
+    background-color: rgb(0, 173, 179);
 }
