--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
-
+$materialize-fonts-path: '~materialize-angular/fonts';
+ 
+@import '~materialize-angular/styles/materialize-angular.scss';
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+
+.navigation{
+    background-color: rgb(0, 173, 179);
+}
